--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,10 +4,11 @@ body {
 }
 
 .profile-card {
-  transition: transform 0.2s;
+  transition:git transform 0.2s;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background-color: #FFFFFF ;
 }
 
 .profile-card:hover {
@@ -30,25 +31,25 @@ body {
 
 h1 {
   text-align: center;
-  color: navy;
+  color: #8B4513;
 }
 
 h4 {
   text-align: center;
-  color: #333;
+  color: peru;
 }
 
 h5 {
   text-align: center;
-  color: #333;
+  color: peru;
 }
 
 h3 {
-  color: navy;
+  color: tan;
   margin: 10px 0 5px;
 }
 
 p {
   margin: 5px 0;
-  color: #555;
+  color: rgb(141, 138, 138);
 }
