--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,18 @@
 body {
   font-family: 'Arial', sans-serif;
-  background-color: beige;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
+  background-color: #cdcdf5;
+  color: #333;
 }
 
 .profile-card {
-  transition:git transform 0.2s;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  background-color: #FFFFFF ;
+    max-width: 800px;
+    margin: 20px auto;
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .profile-card:hover {
@@ -19,7 +23,7 @@ body {
   height: 150px; 
   overflow: hidden;
   border-radius: 50%;
-  border: 2px solid silver;
+  border: 2px solid rgb(150, 11, 129);
   margin: 0 auto; 
 }
 
@@ -31,25 +35,27 @@ body {
 
 h1 {
   text-align: center;
-  color: #8B4513;
+  color: #800080;
 }
 
 h4 {
   text-align: center;
-  color: peru;
+  color: rgb(136, 30, 127);
 }
 
 h5 {
   text-align: center;
-  color: peru;
+  color: rgb(136, 30, 127);
 }
 
 h3 {
-  color: tan;
-  margin: 10px 0 5px;
+  font-size: 1.2em;
+  color: #180a19;
+  margin: 5px 0;
 }
 
 p {
+  font-size: 0.9em;
+  color: #6c0663;
   margin: 5px 0;
-  color: rgb(141, 138, 138);
 }
